syntax = "proto3";

package Bench.Common;

service RpcService {
	rpc GetTimestamp (Empty) returns (Timestamp) {}
	rpc GetCounterJsonStr(Empty) returns (Strg) {}
	rpc GetState(Empty) returns (Stat) {}
	rpc LoadJobConfig (Path) returns (Stat) {}
	rpc CreateWorker(Empty) returns (Stat) {}
	rpc CollectCounters(Force) returns (CounterDict) {}
	rpc RunJob(Empty) returns (Stat) {}
	rpc Test(Strg) returns (Stat) {} 
}

message Force {
	bool force = 1;
}

message Pair {
   string key = 1;
   int32 value = 2;
}

message CounterDict {
   repeated Pair pairs = 1;
}

message Path {
	string ppath = 1;
}

message Stat {
	enum State {
		DEBUG_TODO = 0;
	
		HUBCONN_UNCONNECTED = 1;
		HUBCONN_CONNECTING = 2;
		HUBCONN_CONNECTED = 3;
		HUBCONN_DISCONNECTING = 4;
		HUBCONN_DISCONNECTED = 5;
		HUBCONN_DISPOSING = 6;
		HUBCONN_DISPOSED = 7;

		CONFIG_UNLOADED = 8;
		CONFIG_LOADING = 9;
		CONFIG_LOADED = 10;
		
		SEND_READY = 11;
		SEND_RUNNING = 12;
		SEND_COMPLETE = 13;

		WORKER_UNEXIST = 14;
		WORKER_CREATING = 15;
		WORKER_CREATED = 16;
		WORKER_EXISTED = 17;

		HUBCONN_UNCREATED = 18;
		HUBCONN_CREATING = 19;
		HUBCONN_CREATED = 20;
	}
	State state = 1; 
}

message Strg {
	string str = 1;
}

message Timestamp {
	uint64 time = 1;
}

message Empty {}